[gd_scene load_steps=70 format=3 uid="uid://bfyj0eikcar5u"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_wfy1g"]
[ext_resource type="Texture2D" uid="uid://c0sg4tciuu11l" path="res://Assets/Knight_player/Idle_KG_1.png" id="2_m0fyt"]
[ext_resource type="Texture2D" uid="uid://d0wrd7477147v" path="res://Assets/Knight_player/Fall_KG_1.png" id="2_niv4s"]
[ext_resource type="Texture2D" uid="uid://cejfdh5ncnarc" path="res://Assets/Knight_player/Attack_KG_1.png" id="2_rwmi5"]
[ext_resource type="Texture2D" uid="uid://bkncu5mmgnd4l" path="res://Assets/Knight_player/Crouching_Walk_KG_1.png" id="3_0g5vf"]
[ext_resource type="Texture2D" uid="uid://bfda7y8mmb3er" path="res://Assets/Knight_player/Dying_KG_2.png" id="3_8l7dg"]
[ext_resource type="Texture2D" uid="uid://kfw066ajqr5f" path="res://Assets/Knight_player/Jump_KG_1.png" id="4_hen6f"]
[ext_resource type="Texture2D" uid="uid://c032adacitfa6" path="res://Assets/Knight_player/Walking_KG_2.png" id="5_jsklr"]
[ext_resource type="Texture2D" uid="uid://bpf138f4gtfq6" path="res://Assets/Knight_player/Hurt_KG_2.png" id="6_3dqa6"]
[ext_resource type="Script" path="res://Scripts/HurtBox.gd" id="8_3ykut"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/State Machine.gd" id="12_0ei1a"]
[ext_resource type="Script" path="res://Scripts/Pivot.gd" id="12_qpqfy"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerIdle.gd" id="13_yubpb"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerWalk.gd" id="14_nd8pf"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerJump.gd" id="15_3t6u0"]
[ext_resource type="Script" path="res://Scripts/HitBox.gd" id="15_cmk5t"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerFall.gd" id="16_6q6fw"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerGlide.gd" id="17_jskyq"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerAttack.gd" id="18_quyp1"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerHit.gd" id="19_wqlw5"]
[ext_resource type="Script" path="res://Scripts/PlayerStateMachine/PlayerDead.gd" id="20_q6t10"]
[ext_resource type="PackedScene" uid="uid://k2hb7kp27grp" path="res://Scene/chain.tscn" id="22_jp6ba"]
[ext_resource type="Script" path="res://Scripts/PlayerHook.gd" id="23_1djop"]

[sub_resource type="AtlasTexture" id="AtlasTexture_06lk4"]
atlas = ExtResource("2_rwmi5")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7htio"]
atlas = ExtResource("2_rwmi5")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbmdg"]
atlas = ExtResource("2_rwmi5")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxkk8"]
atlas = ExtResource("2_rwmi5")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxf4h"]
atlas = ExtResource("2_rwmi5")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeuju"]
atlas = ExtResource("2_rwmi5")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jjfj"]
atlas = ExtResource("3_8l7dg")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrmtw"]
atlas = ExtResource("3_8l7dg")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ehw"]
atlas = ExtResource("3_8l7dg")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtruu"]
atlas = ExtResource("3_8l7dg")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tqsv"]
atlas = ExtResource("3_8l7dg")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62fs7"]
atlas = ExtResource("3_8l7dg")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6tyu"]
atlas = ExtResource("2_niv4s")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvm7p"]
atlas = ExtResource("2_niv4s")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryudl"]
atlas = ExtResource("2_niv4s")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7lnl"]
atlas = ExtResource("3_0g5vf")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb6c0"]
atlas = ExtResource("3_0g5vf")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x2v4"]
atlas = ExtResource("3_0g5vf")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5108"]
atlas = ExtResource("3_0g5vf")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugtp2"]
atlas = ExtResource("6_3dqa6")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkfqo"]
atlas = ExtResource("6_3dqa6")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdot4"]
atlas = ExtResource("6_3dqa6")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_db2ob"]
atlas = ExtResource("6_3dqa6")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cowm"]
atlas = ExtResource("2_m0fyt")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yithd"]
atlas = ExtResource("2_m0fyt")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp4vu"]
atlas = ExtResource("2_m0fyt")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1hd4"]
atlas = ExtResource("2_m0fyt")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_54vkj"]
atlas = ExtResource("4_hen6f")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qejmq"]
atlas = ExtResource("4_hen6f")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brdjy"]
atlas = ExtResource("4_hen6f")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lvdt"]
atlas = ExtResource("4_hen6f")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwi36"]
atlas = ExtResource("4_hen6f")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h274c"]
atlas = ExtResource("4_hen6f")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ulm"]
atlas = ExtResource("5_jsklr")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6esq"]
atlas = ExtResource("5_jsklr")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fivr"]
atlas = ExtResource("5_jsklr")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovqww"]
atlas = ExtResource("5_jsklr")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkall"]
atlas = ExtResource("5_jsklr")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxxrn"]
atlas = ExtResource("5_jsklr")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w22m2"]
atlas = ExtResource("5_jsklr")
region = Rect2(600, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gklly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06lk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7htio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbmdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxkk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxf4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeuju")
}],
"loop": false,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jjfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrmtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ehw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtruu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tqsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62fs7")
}],
"loop": false,
"name": &"Dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvm7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryudl")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7lnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb6c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x2v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5108")
}],
"loop": true,
"name": &"Fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugtp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkfqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdot4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db2ob")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cowm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yithd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp4vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1hd4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54vkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qejmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brdjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lvdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwi36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h274c")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ulm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6esq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fivr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovqww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkall")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxxrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w22m2")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h76br"]
size = Vector2(19, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f0ku"]
radius = 12.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dykhl"]
radius = 18.0
height = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6g6v"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odov4"]
bg_color = Color(0, 0.668987, 0.597158, 1)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, 0)
collision_layer = 4
script = ExtResource("1_wfy1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -32)
sprite_frames = SubResource("SpriteFrames_gklly")
animation = &"Dead"

[node name="Collisions" type="CollisionShape2D" parent="."]
position = Vector2(1, -16)
shape = SubResource("RectangleShape2D_h76br")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 16
script = ExtResource("8_3ykut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -25)
shape = SubResource("CapsuleShape2D_1f0ku")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("15_cmk5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(41, -33)
shape = SubResource("CapsuleShape2D_dykhl")

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(14, -25)
script = ExtResource("12_qpqfy")

[node name="chain" parent="Pivot" node_paths=PackedStringArray("player") instance=ExtResource("22_jp6ba")]
position = Vector2(0, -3.46945e-18)
player = NodePath("../..")

[node name="FallingCast" type="RayCast2D" parent="."]
position = Vector2(1, -30)
target_position = Vector2(0, -2)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, -125)

[node name="flyBar" type="ProgressBar" parent="Marker2D"]
offset_left = -60.0
offset_top = -14.0
offset_right = 60.0
offset_bottom = 14.0
theme_override_styles/background = SubResource("StyleBoxFlat_x6g6v")
theme_override_styles/fill = SubResource("StyleBoxFlat_odov4")
value = 100.0

[node name="flyLimit" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="StateMachinePlayer" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("12_0ei1a")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("13_yubpb")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[node name="Walk" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("14_nd8pf")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[node name="Jump" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "glide_bar", "flyLimit", "animation")]
script = ExtResource("15_3t6u0")
player = NodePath("../..")
glide_bar = NodePath("../../Marker2D/flyBar")
flyLimit = NodePath("../../flyLimit")
animation = NodePath("../../AnimatedSprite2D")

[node name="Timer" type="Timer" parent="StateMachinePlayer/Jump"]
wait_time = 0.2
one_shot = true

[node name="Fall" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("16_6q6fw")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[node name="Glide" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "glide_bar", "flyLimit")]
script = ExtResource("17_jskyq")
player = NodePath("../..")
glide_bar = NodePath("../../Marker2D/flyBar")
flyLimit = NodePath("../../flyLimit")

[node name="Attack" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation", "attackHitBox")]
script = ExtResource("18_quyp1")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")
attackHitBox = NodePath("../../Hitbox/CollisionShape2D")

[node name="Hit" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation", "InvincibilityTimer")]
script = ExtResource("19_wqlw5")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")
InvincibilityTimer = NodePath("HitTimer")

[node name="HitTimer" type="Timer" parent="StateMachinePlayer/Hit"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation", "playerHitBox", "playerCollisionBox")]
script = ExtResource("20_q6t10")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")
playerHitBox = NodePath("../../Hitbox")
playerCollisionBox = NodePath("../../Collisions")

[node name="RespawnTimer" type="Timer" parent="StateMachinePlayer/Dead"]
wait_time = 3.0
one_shot = true

[node name="Hook" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("23_1djop")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Attack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Hit" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hooked" from="Pivot/chain" to="." method="_on_chain_hooked"]
[connection signal="timeout" from="flyLimit" to="." method="flyLimit_timeout"]
[connection signal="timeout" from="flyLimit" to="StateMachinePlayer/Jump" method="_on_fly_limit_timeout"]
[connection signal="timeout" from="flyLimit" to="StateMachinePlayer/Glide" method="_on_fly_limit_timeout"]
[connection signal="Idle" from="StateMachinePlayer/Idle" to="." method="_on_idle_idle"]
[connection signal="Jumping" from="StateMachinePlayer/Jump" to="." method="_on_jump_jumping"]
[connection signal="timeout" from="StateMachinePlayer/Jump/Timer" to="StateMachinePlayer/Jump" method="_on_timer_timeout"]
[connection signal="Fall" from="StateMachinePlayer/Fall" to="." method="_on_fall_fall"]
[connection signal="Attack" from="StateMachinePlayer/Attack" to="." method="_on_attack_attack"]
[connection signal="timeout" from="StateMachinePlayer/Hit/HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="StateMachinePlayer/Dead/RespawnTimer" to="StateMachinePlayer/Dead" method="_on_respawn_timer_timeout"]
